--- a/css/style.css
+++ b/css/style.css
@@ -963,6 +963,10 @@ body {
     margin:40px 0;
 }
 
+.about__items-optica {
+    margin-top: 0;
+}
+
 @media screen and (min-width:320px) and (max-width:767px) {
     .about__items-optica,
     .about__items-founder {
