--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,7 @@ body {
   background-color: var(--color-bg);
   color: var(--color-text);
   font: normal 300 16px var(--primary-font), sans-serif;
-  letter-spacing: 1.4;
+  letter-spacing: 1px;
 }
 
 /* ===========================================================  button =========================================================== */
@@ -399,16 +399,16 @@ body {
 }
 
 /* ===============================================================  title =============================================================== */
-@media screen and (min-width:320px) and (max-width:767px) {
-    .title {
-        font-size: 38px;
-    }
-}
-
 .title {
     text-align: center;
     margin-bottom: 40px;
     font: 800 58px var(--title-font), serif;
+}
+
+@media screen and (min-width:320px) and (max-width:767px) {
+    .title {
+        font-size: 38px;
+    }
 }
 
 /* ===============================================================  heder =============================================================== */
@@ -968,6 +968,12 @@ body {
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
+    .about__paragraph {
+        font-size: 20px;
+        text-align: center;
+        text-align: start;
+    }
+
     .about__items-optica,
     .about__items-founder {
         flex-direction: column;
@@ -975,8 +981,11 @@ body {
         justify-content: center;
     }
 
-    .about__items-optica,
     .about__items-founder li:not(:last-child) {
+        margin-bottom: 20px;
+    }
+
+    .about__items-optica li:not(:last-child) {
         margin-bottom: 20px;
     }
 }
@@ -1085,6 +1094,10 @@ body {
 }
 
 @media screen and (min-width:320px) and (max-width:767px) {
+    .ophthalmologist__description {
+        font-size: 20px;
+        text-align: start;
+    }
     .ophthalmologist__paragraph {
         flex-direction: column;
     }
